# Port-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
port_scanner/: __init__.py  scanner.py
